--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,3 @@
-VUE_APP_URL_API_STORAGE=https://localhost:26443/soa-storage
+VUE_APP_URL_API_STORAGE=http://localhost:26449/soa-1
 VUE_APP_URL_API_ACTIONS=https://localhost:8181/service-oriented-architecture-actions-jaxrs-api
 VUE_APP_SUBPATH=/~s264449/soa-front/
